[package]
name = "rudimento"
version = "0.1.0"
authors = ["Matteo De Carlo <matteo.dek@gmail.com>"]
build = "build.rs"

[dependencies]
gl = "0.10.0"
khronos = "0.1.2"
libc = "0.2.42"
libudev = "0.2.0"
dbus = "0.6.2"
drm-rs = "0.1.2"
wayland-server = "0.20.10"
mashup = "0.1.4"

[build-dependencies]
gl_generator = "0.9.0"
pkg-config = "0.3.11"
